feat: added the references and the translation

--- a/frontEndCaptini/src/assets/i18n/en.json
+++ b/frontEndCaptini/src/assets/i18n/en.json
@@ -116,7 +116,8 @@
 		"leaderBoard": "Leaderboard",
 		"review": "Review",
 		"community": "Community",
-		"statics": "Statistics"
+		"statics": "Statistics",
+		"reference": "References"
 	},
 	"menu": {
 		"updateProfile": "Update Profile",
