--- a/frontEndCaptini/src/assets/i18n/icl.json
+++ b/frontEndCaptini/src/assets/i18n/icl.json
@@ -117,7 +117,8 @@
 		"leaderBoard": "Stigatafla",
 		"review": "Yfirlit",
 		"community": "Samfélag",
-		"statics": "Tölfræði"
+		"statics": "Tölfræði",
+		"reference": "Heimildir"
 	},
 	"menu": {
 		"updateProfile": "Uppfæra prófil",
