--- a/frontEndCaptini/src/assets/i18n/icl.json
+++ b/frontEndCaptini/src/assets/i18n/icl.json
@@ -213,6 +213,8 @@
 		"logo-design": "Hönnun merkisins var unnin út frá merkinu frá ",
 		"reading-exercice": "Framburðaræfingar á CAPTinI eru byggðar á efni ",
 		"pedagoy": "Kennslufræði sem liggur að baki ",
-		"topics-images": "Myndir fyrir bálka: "
+		"topics-images": "Myndir fyrir bálka: ",
+		"collaboration":"Eftirfarandi stofnanir og fyrirtæki unnu að verkefninu:",
+		"collaboration-content": "Háskólinn í Reykjavík, Háskóli Íslands, Tiro ehf og Stofnun Árna Magnússonar í íslenskum fræðum. Hugbúnaðarþróunarfyrirtækið Víkonnekt (stofnað af Safa Jemai) vann að verkefninu sem verktaki. Aðrir þátttakendur voru Marc Skipstað Volhardt og Bjarni Barkarson, auk þriggja nemenda sem unnu að verkefninu með styrk frá Nýsköpunarsjóði námsmanna: Theresia Mita Erika, Davide Parente og Daniel Logi Matthíason. Verkefnastjórn var í höndum Háskólans í Reykjavík. Þetta verkefni er opið. Kóða og líkön má finna hér: https://github.com/captini-org. Ef þú hefur spurningar eða ábendingar og vilt hafa samband við okkur, vinsamlegast hafðu samband við: _____________."
 	}
 }
